{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 17,
  "lineage": "3987ed3e-835e-53f9-53ed-7b801d5623ee",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd804d7eac60e497",
            "domain": "vpc",
            "id": "eipalloc-0cd804d7eac60e497",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-120-116.compute-1.amazonaws.com",
            "public_ip": "3.228.120.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Cloud-staging-TerraformVPC-us-east-1a",
              "environment": "staging",
              "owners": "Cloud"
            },
            "tags_all": {
              "Name": "Cloud-staging-TerraformVPC-us-east-1a",
              "environment": "staging",
              "owners": "Cloud"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535590518725:internet-gateway/igw-006db427652f77564",
            "id": "igw-006db427652f77564",
            "owner_id": "535590518725",
            "tags": {
              "Name": "Cloud-staging-TerraformVPC",
              "environment": "staging",
              "owners": "Cloud"
            },
            "tags_all": {
              "Name": "Cloud-staging-TerraformVPC",
              "environment": "staging",
              "owners": "Cloud"
            },
            "vpc_id": "vpc-079770a6a39a09a2d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd804d7eac60e497",
            "connectivity_type": "public",
            "id": "nat-0c559cf92ec836729",
            "network_interface_id": "eni-0335f6afb00a8c616",
            "private_ip": "10.0.101.7",
            "public_ip": "3.228.120.116",
            "subnet_id": "subnet-01eee69e21eb18313",
            "tags": {
              "Name": "Cloud-staging-TerraformVPC-us-east-1a",
              "environment": "staging",
              "owners": "Cloud"
            },
            "tags_all": {
              "Name": "Cloud-staging-TerraformVPC-us-east-1a",
              "environment": "staging",
              "owners": "Cloud"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d1b7cec9a6d613191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c559cf92ec836729",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d1b7cec9a6d61319",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-006db427652f77564",
            "id": "r-rtb-05293d6b5851244101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05293d6b585124410",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535590518725:route-table/rtb-0d1b7cec9a6d61319",
            "id": "rtb-0d1b7cec9a6d61319",
            "owner_id": "535590518725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Cloud-staging-TerraformVPC-private",
              "environment": "staging",
              "owners": "Cloud"
            },
            "tags_all": {
              "Name": "Cloud-staging-TerraformVPC-private",
              "environment": "staging",
              "owners": "Cloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-079770a6a39a09a2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535590518725:route-table/rtb-05293d6b585124410",
            "id": "rtb-05293d6b585124410",
            "owner_id": "535590518725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Cloud-staging-TerraformVPC-public",
              "environment": "staging",
              "owners": "Cloud"
            },
            "tags_all": {
              "Name": "Cloud-staging-TerraformVPC-public",
              "environment": "staging",
              "owners": "Cloud"
            },
            "timeouts": null,
            "vpc_id": "vpc-079770a6a39a09a2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059610e65ef11dbcd",
            "route_table_id": "rtb-0d1b7cec9a6d61319",
            "subnet_id": "subnet-066488214658e5607"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074368426eaf9fddd",
            "route_table_id": "rtb-0d1b7cec9a6d61319",
            "subnet_id": "subnet-063cef60da5f2a011"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05570951a8b28fbf0",
            "route_table_id": "rtb-05293d6b585124410",
            "subnet_id": "subnet-01eee69e21eb18313"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a6a775c9f7eea7b",
            "route_table_id": "rtb-05293d6b585124410",
            "subnet_id": "subnet-0f0d4db116b84ee80"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535590518725:subnet/subnet-066488214658e5607",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066488214658e5607",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535590518725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Cloud-staging-TerraformVPC-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "staging",
              "owners": "Cloud"
            },
            "tags_all": {
              "Name": "Cloud-staging-TerraformVPC-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "staging",
              "owners": "Cloud"
            },
            "vpc_id": "vpc-079770a6a39a09a2d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535590518725:subnet/subnet-063cef60da5f2a011",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063cef60da5f2a011",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535590518725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Cloud-staging-TerraformVPC-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "staging",
              "owners": "Cloud"
            },
            "tags_all": {
              "Name": "Cloud-staging-TerraformVPC-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "staging",
              "owners": "Cloud"
            },
            "vpc_id": "vpc-079770a6a39a09a2d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535590518725:subnet/subnet-01eee69e21eb18313",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eee69e21eb18313",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "535590518725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Cloud-staging-TerraformVPC-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "staging",
              "owners": "Cloud"
            },
            "tags_all": {
              "Name": "Cloud-staging-TerraformVPC-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "staging",
              "owners": "Cloud"
            },
            "vpc_id": "vpc-079770a6a39a09a2d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535590518725:subnet/subnet-0f0d4db116b84ee80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0d4db116b84ee80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "535590518725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Cloud-staging-TerraformVPC-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "staging",
              "owners": "Cloud"
            },
            "tags_all": {
              "Name": "Cloud-staging-TerraformVPC-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "staging",
              "owners": "Cloud"
            },
            "vpc_id": "vpc-079770a6a39a09a2d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535590518725:vpc/vpc-079770a6a39a09a2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0baddbfba4455b9b9",
            "default_route_table_id": "rtb-02eb4f921e0fe322f",
            "default_security_group_id": "sg-0b4da0dfec1bada11",
            "dhcp_options_id": "dopt-aed976d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-079770a6a39a09a2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02eb4f921e0fe322f",
            "owner_id": "535590518725",
            "tags": {
              "Name": "Cloud-staging-TerraformVPC",
              "environment": "staging",
              "owners": "Cloud"
            },
            "tags_all": {
              "Name": "Cloud-staging-TerraformVPC",
              "environment": "staging",
              "owners": "Cloud"
            }
          }
        }
      ]
    }
  ]
}